# manga-stitcher

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/manga_stitcher/: __main__.py  cli.py  manga_stitcher.py
src/manga_stitcher_recoskyler/: __main__.py  manga-stitcher.py  manga_stitcher.py
