[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "manga_stitcher_recoskyler"
version = "1.0.1"
authors = [
  { name="recoskyler", email="38231748+recoskyler@users.noreply.github.com" },
]
description = "A straightforward tool designed to automatically combine manga pages vertically, creating a seamless reading experience"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/recoskyler/manga-stitcher"
Issues = "https://github.com/recoskyler/manga-stitcher/issues"
