[build-system]
requires = [
    "setuptools >= 77.0.3",
    "cbz >= 3.4.3",
    "Pillow >= 11.3.0",
    "rarfile >= 4.2",
    "tqdm >= 4.67.1",
    "typer >= 0.17.4",
    "typing_extensions >= 4.15.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "manga_stitcher"
version = "1.0.0"
authors = [
  { name="recoskyler", email="38231748+recoskyler@users.noreply.github.com" },
]
description = "A straightforward tool designed to automatically combine manga pages vertically, creating a seamless reading experience"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/recoskyler/manga-stitcher"
Issues = "https://github.com/recoskyler/manga-stitcher/issues"

[project.scripts]
manga-stitcher = "manga_stitcher.cli:app"
